Correcting the usage of igrf_B altitude above the IGRF sphere, different from the geodetic height.

--- a/notebooks/igrf_usage.ipynb
+++ b/notebooks/igrf_usage.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from pyigrf.igrf import igrf\n",
     "import numpy as np\n",
-    "import datetime"
+    "import datetime\n",
+    "from __future__ import print_function, division"
    ]
   },
   {
@@ -80,30 +81,45 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(11149.457507389841, 3392.8408343304177, 52465.00856440682, 53743.82657849618)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geodetic coordinates: latitude:65.1299 deg, longitude:-147.471 deg, altitude:100 km\n",
+      "geocentric coordinates: latitude:64.985 deg, longitude:-147.471 deg, IGRF altitude:89.3606 km\n",
+      "B = 54014.4 nT: 11201.8 nT northwards, 3415.06 nT eastwards, 52729.6 nT downwards\n"
+     ]
     }
    ],
    "source": [
-    "deg = 180/np.pi\n",
+    "def datetime2years(dt0):\n",
+    "    daysinyear = (dt0 - datetime.datetime(dt0.year,1,1)).total_seconds()/24/3600\n",
+    "    totaldaysinyear = datetime.datetime(dt0.year,12,31).timetuple().tm_yday\n",
+    "    return dt0.year + daysinyear/totaldaysinyear\n",
+    "\n",
     "geod_lat = 65.12992\n",
     "lon = -147.47104\n",
-    "ht = 0.213 + 100   #km\n",
-    "dt0 = datetime.datetime(2020,2,9)\n",
-    "yeardays = datetime.datetime(dt0.year,12,31).timetuple().tm_yday\n",
-    "x,y,z,lat = geod2geoc(lon/deg, geod_lat/deg, ht)\n",
-    "doy = dt0.timetuple().tm_yday\n",
-    "year = dt0.year + doy/yeardays\n",
+    "geod_ht = 100   #km above WGS-84 ellipsoide\n",
+    "print(\"geodetic coordinates: latitude:%g deg, longitude:%g deg, altitude:%g km\"%(\n",
+    "    geod_lat,lon,geod_ht))\n",
+    "deg = 180/np.pi\n",
+    "x,y,z,geoc_lat = geod2geoc(lon/deg, geod_lat/deg, geod_ht) # convert to geocentric\n",
+    "ht_igrf = np.sqrt(x**2 + y**2 + z**2) - igrf0.a # height above IGRF sphere with radius 6371.2 km\n",
+    "dt0 = datetime.datetime(2020,2,9,12,12,12)\n",
+    "year = datetime2years(dt0)\n",
     "\n",
-    "[Bn,Be,Bd,B] = igrf0.igrf_B(year, ht, lon, lat*deg)\n",
-    "Bn,Be,Bd,B"
+    "print(\"geocentric coordinates: latitude:%g deg, longitude:%g deg, IGRF altitude:%g km\"%(\n",
+    "    geoc_lat*deg,lon,ht_igrf))\n",
+    "[Bn,Be,Bd,B] = igrf0.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
+    "print(\"B = %g nT: %g nT northwards, %g nT eastwards, %g nT downwards\"%(\n",
+    "         B,Bn,Be,Bd))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
