Updating notebook examples

--- a/notebooks/igrf_usage.ipynb
+++ b/notebooks/igrf_usage.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyigrf.igrf import igrf\n",
+    "from __future__ import print_function, division\n",
+    "import pyigrf\n",
     "import numpy as np\n",
-    "import datetime\n",
-    "from __future__ import print_function, division"
+    "import datetime"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B @ 100 km above PFISR on Feb 09, 2020:\n",
+    "## B @ 100 km above PFISR on Feb 18, 2021:\n",
     "https://amisr.com/amisr/about/about_pfisr/pfisr-specs/\n",
     "\n",
     "Latitude, Longitude, Altitude: 65.12992 N, 147.47104 W, 213 m"
@@ -63,30 +63,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using coefficients file: igrf13coeffs.txt\n",
-      "max_n is 13\n",
-      "Last Epoch year is: 2020.0\n",
-      "secular variation: 2020-25\n"
-     ]
-    }
-   ],
-   "source": [
-    "# instantiating IGRF:\n",
-    "igrf0 = igrf(verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "geodetic coordinates: latitude:65.1299 deg, longitude:-147.471 deg, altitude:100 km\n",
       "geocentric coordinates: latitude:64.985 deg, longitude:-147.471 deg, IGRF altitude:89.3606 km\n",
-      "B = 54014.4 nT: 11201.8 nT northwards, 3415.06 nT eastwards, 52729.6 nT downwards\n"
+      "B = 53957.2 nT: 11241.4 nT northwards, 3357.46 nT eastwards, 52666.3 nT downwards\n"
      ]
     }
    ],
@@ -103,13 +82,13 @@
     "    geod_lat,lon,geod_ht))\n",
     "deg = 180/np.pi\n",
     "x,y,z,geoc_lat = geod2geoc(lon/deg, geod_lat/deg, geod_ht) # convert to geocentric\n",
-    "ht_igrf = np.sqrt(x**2 + y**2 + z**2) - igrf0.a # height above IGRF sphere with radius 6371.2 km\n",
-    "dt0 = datetime.datetime(2020,2,9,12,12,12)\n",
+    "ht_igrf = np.sqrt(x**2 + y**2 + z**2) - pyigrf.a_igrf # height above IGRF sphere with radius 6371.2 km\n",
+    "dt0 = datetime.datetime(2021,2,18,12,12,12)\n",
     "year = datetime2years(dt0)\n",
     "\n",
     "print(\"geocentric coordinates: latitude:%g deg, longitude:%g deg, IGRF altitude:%g km\"%(\n",
     "    geoc_lat*deg,lon,ht_igrf))\n",
-    "[Bn,Be,Bd,B] = igrf0.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
+    "[Bn,Be,Bd,B] = pyigrf.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
     "print(\"B = %g nT: %g nT northwards, %g nT eastwards, %g nT downwards\"%(\n",
     "         B,Bn,Be,Bd))"
    ]
