--- a/notebooks/igrf_examples.ipynb
+++ b/notebooks/igrf_examples.ipynb
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "import pyigrf\n",
+    "from pyigrf import pyigrf\n",
     "import datetime\n",
     "import numpy as np\n",
     "import time\n",
