--- a/notebooks/igrf_usage.ipynb
+++ b/notebooks/igrf_usage.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from __future__ import print_function, division\n",
-    "import pyigrf\n",
+    "from pyigrf import pyigrf\n",
     "import numpy as np\n",
     "import datetime"
    ]
