Updating notebook examples

--- a/notebooks/igrf_examples.ipynb
+++ b/notebooks/igrf_examples.ipynb
@@ -76,12 +76,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed calculating IGRF for 63724 points: 10 seconds\n"
+      "Time elapsed calculating IGRF for 63724 points: 11 seconds\n"
      ]
     }
    ],
    "source": [
-    "from pyigrf import pyigrf\n",
+    "from pyigrf import igrf\n",
     "import datetime\n",
     "import numpy as np\n",
     "import time\n",
@@ -103,7 +103,7 @@
     "    for j,lon in enumerate(longs):\n",
     "        x,y,z,lat = geod2geoc(lon/deg, geod_lat/deg, ht)\n",
     "        gclats += [lat*deg]\n",
-    "        [Bn,Be,Bd,B] = pyigrf.igrf_B(year, ht, lon, lat*deg)\n",
+    "        [Bn,Be,Bd,B] = igrf.igrf_B(year, ht, lon, lat*deg)\n",
     "        inclination[i,j] = np.arcsin(Bd/B)*deg\n",
     "        declination[i,j] = np.arctan2(Be,Bn)*deg\n",
     "t1 = time.time()\n",
@@ -195,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36",
+   "display_name": "python3.6_env",
    "language": "python",
-   "name": "py36"
+   "name": "python3.6_env"
   },
   "language_info": {
    "codemirror_mode": {
