--- a/notebooks/igrf_usage.ipynb
+++ b/notebooks/igrf_usage.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from __future__ import print_function, division\n",
-    "from pyigrf import pyigrf\n",
+    "from pyigrf import igrf\n",
     "import numpy as np\n",
     "import datetime"
    ]
@@ -82,13 +82,79 @@
     "    geod_lat,lon,geod_ht))\n",
     "deg = 180/np.pi\n",
     "x,y,z,geoc_lat = geod2geoc(lon/deg, geod_lat/deg, geod_ht) # convert to geocentric\n",
-    "ht_igrf = np.sqrt(x**2 + y**2 + z**2) - pyigrf.a_igrf # height above IGRF sphere with radius 6371.2 km\n",
+    "ht_igrf = np.sqrt(x**2 + y**2 + z**2) - igrf.a_igrf # height above IGRF sphere with radius 6371.2 km\n",
     "dt0 = datetime.datetime(2021,2,18,12,12,12)\n",
     "year = datetime2years(dt0)\n",
     "\n",
     "print(\"geocentric coordinates: latitude:%g deg, longitude:%g deg, IGRF altitude:%g km\"%(\n",
     "    geoc_lat*deg,lon,ht_igrf))\n",
-    "[Bn,Be,Bd,B] = pyigrf.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
+    "[Bn,Be,Bd,B] = igrf.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
+    "print(\"B = %g nT: %g nT northwards, %g nT eastwards, %g nT downwards\"%(\n",
+    "         B,Bn,Be,Bd))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### use other coefficients:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available coefficients:\n",
+      "0 igrf11coeffs.txt\n",
+      "1 igrf12coeffs.txt\n",
+      "2 igrf13coeffs.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyigrf\n",
+    "import os\n",
+    "print(\"Available coefficients:\")\n",
+    "for i,coeff_file in enumerate(pyigrf.igrf.coeff_files):\n",
+    "    print(i, os.path.basename(coeff_file))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### selecting igrf11:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "igrf11 = pyigrf.igrf_version(pyigrf.igrf.coeff_files[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B = 54446 nT: 11114.1 nT northwards, 3363.23 nT eastwards, 53193.4 nT downwards\n"
+     ]
+    }
+   ],
+   "source": [
+    "[Bn,Be,Bd,B] = igrf11.igrf_B(year, ht_igrf, lon, geoc_lat*deg)\n",
     "print(\"B = %g nT: %g nT northwards, %g nT eastwards, %g nT downwards\"%(\n",
     "         B,Bn,Be,Bd))"
    ]
